Mon Dec 15 19:39:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Options.html:
          Added a note that dev_poll is experimental

Mon Dec 15 18:18:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/AV/SCTP_SEQ.cpp:
          Fixed compile error

Mon Dec 15 13:38:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/BiDirectional/run_test.pl:
        * tests/BiDirectional/run_test_ipv6.pl:
        * tests/BiDirectional_DelayedUpcall/run_test.pl:
        * tests/BiDirectional_MultipleORB/run_test.pl:
        * tests/BiDirectional_NestedUpcall/run_test.pl:
          Updated to the new test framework

Mon Dec 15 04:55:10 UTC 2008  Trevor Fields  <fields_t@ociweb.com>

        * tao/AnyTypeCode/Recursive_Type_TypeCode.h:
        * tao/AnyTypeCode/Recursive_Type_TypeCode.inl:
        * tao/AnyTypeCode/TypeCode_CDR_Extraction.cpp:
        Reverted change in
        Mon Dec 01 19:47:02 UTC 2008  Trevor Fields  <fields_t@ociweb.com>
        because it introduced a memory leak.
        Changed the recursive type code to not over write previously
        assigned members.  This can occur when a recusive typecode
        has already been extracted and then is extracted again.
        The extraction routine detects that recursive type code did
        not over write the pre existing members and increments the
        reference count on the the typecode to account for the reference
        in the local member of the extraction method.

Wed Dec 10 21:49:00 UTC 2008  Ciju John  <johnc at ociweb dot com>

        * tests/Objref_Sequence_Test/run_test.pl:
          increase test timeout.

Mon Dec  8 22:29:19 UTC 2008  Ciju John  <johnc at ociweb dot com>

        * orbsvcs/orbsvcs/AV/SCTP_SEQ.cpp:
          fix SunCC build error.

Mon Dec  8 14:45:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB.cpp:
          Removed not needed include
